[package]
name = "proxy_simulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



[[bin]]
name = "client"
path = "src/bin/client.rs"



[[bin]]
name = "server"
path = "src/bin/server.rs"



[target.'cfg(not(windows))'.dependencies]
daemonize = "0.5.0"


[dependencies]
tokio = { version = "1", features = ["full"] }
clap = "4.3.23"
log = "0.4.0"
termcolor = "1.1.2"
chrono = "0.4.26"
once_cell = "1"
rustls = "0.21.6"
webpki-roots = "0.25.2"
dns-lookup = "2.0.2"
regex = "1.5"
toml = "0.7.6"
sha2 = "0.10"
hex = "0.4"
rand = "0.8.5"
